# do-codeguardian

./: .agent.md  .codeqlignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  AGENTS.md  BUILD_OPTIMIZATION_README.md  CHANGELOG.md  CODEBASE_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Cargo_original.toml  DUPLICATE_PREVENTION_IMPROVEMENTS.md  Dockerfile.ci  ENHANCED_FEATURE_EXTRACTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  ML_INTEGRATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS_SUMMARY.md  PERFORMANCE_SUMMARY.md  PROJECT_READY.md  PROJECT_STATUS.md  README.md  REAL_WORLD_PERFORMANCE_RESULTS.md  RUV_FANN_VS_BERT.md  SECURITY.md  TESTING_SUMMARY.md  TRAINING_DATA_PIPELINE_SUMMARY.md  VERIFICATION_REPORT.md  WORKFLOW_TESTING_PLAN.md  WORKFLOW_TEST_RESULTS.md  agents.yaml  analyze  ast-demo-results.json  build.rs  build_fixed.rs  build_original.rs  (+51 more)
.codeguardian/: ai-code-analysis-swarm.md  ai-persona-creation-specialist.md  analysis-swarm-agent.md  beginner-developer-agent.md  benchmark-agent.md  build-ci-optimizer.md  cache-intelligence-agent.md  code-analysis-agent.md  codebase-doc-updater.md  codeguardian-main.md  configuration-agent.md  configuration-validator.md  dependency-agent.md  documentation-specialist.md  false-positive-validator.md  git.md  github-discussions-manager.md  github-docs-specialist.md  github-issue-manager.md  github-pr-manager.md  github-projects-manager.md  github-push-monitor.md  github-workflow-optimizer.md  goap-planner.md  junior-developer.md  ml-pipeline-manager.md  ml-training-specialist.md  opencode-command-documenter.md  orchestrator.md  performance-optimizer.md  release-agent.md  security-auditor.md  streaming-processor.md  swarm-orchestrator.md  swarm-persona-architect.md  task-coordinator.md  websearch.md
.devcontainer/: DOCKERFILE  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  TURBO_CI_GUIDE.md  codeql-config.yml  dependabot.yml  labeler.yml  setup-discussions.sh
.opencode/: README.md  agent-config.json  agents.yaml  config.json  get-repo-info.sh
analysis-results/: README.md  github_duplicate_prevention_analysis.md
benches/: README.md  chaos_engineering_benchmark.rs  comparative_analysis_benchmark.rs  comprehensive_performance_benchmark.rs  enhanced_features_benchmark.rs  hashing_benchmark.rs  load_testing_benchmark.rs  optimization_benchmarks.rs  optimization_recommendations_benchmark.rs  optimization_tracking_benchmark.rs  performance_benchmark.rs  performance_metrics_benchmark.rs  performance_regression_suite.rs  release_monitoring_benchmark.rs  scanning_benchmark.rs  test_benchmark.rs
benchmark_results/: comprehensive_performance_report.md  optimization_validation_report.md
benchmarks/: README.md  load_testing_benchmark_results.json  optimization_recommendations_benchmark_results.json  performance_metrics_benchmark_results.json
codeguardian-results/: results.json
config/: codeguardian.toml  performance_thresholds.json  project_metadata_example.json  training_data_collection.json  validation_config_example.json
docs/: AUTOMATIC_DOCUMENTATION.md  ML_ENHANCEMENTS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  SECURITY_ANALYZER.md  TEST_GOVERNANCE_GUIDELINES.md  TRAINING_DATA_COLLECTION.md  api.md  benchmarking-roadmap.md  ci-cd-notifications-cost-tracking.md  cli-reference.md  configuration-advanced.md  configuration-basics.md  configuration-presets.md  configuration.md  contributing.md  coverage.md  cross-platform-requirements.md  discussions.md  duplicate-issue-prevention.md  duplicate-prevention.md  installation.md  license.md  metrics-framework.md  parallel-output-processing.md  performance-optimization.md  performance_optimization_guide.md  quick-wins-implementation.md  release_monitoring_alerts.md  swarm-orchestrator.md  usage.md
examples/: advanced_feature_extraction.rs  ci-usage.sh  codeguardian.toml  cross_validation_example.rs  enhanced-ml-demo.rs  ensemble_example.rs  indexing_example.rs  ml-training-example.rs  performance-comparison.md  production_model_validation.rs  release_monitoring_alerts.rs  release_monitoring_alerts.rs.bak  security_test.rs  swarm_orchestrator_example.rs  training_data_collection.rs  unified_cache_example.rs  unified_feature_extractor_example.rs
performance_baselines/: baseline_report.md  metrics.csv  timestamp.txt
performance_history/: performance_metrics.json  performance_metrics_20250925_124124.json  performance_metrics_20250925_150957.json  performance_regression_suite_results.json
performance_reports/: anomaly_report_20250925_123836.md  anomaly_report_20250925_150944.md  performance_report_20250925_124057.md  performance_report_20250925_124124.md  performance_report_20250925_150957.md  trend_analysis_report_20250925_123836.md  trend_analysis_report_20250925_150944.md
performance_trends/: cache_trend.txt  memory_trend.txt  performance_20250827.json  performance_20250828.json  performance_20250829.json  performance_20250830.json  performance_20250831.json  performance_20250901.json  performance_20250902.json  performance_20250903.json  performance_20250904.json  performance_20250905.json  performance_20250906.json  performance_20250907.json  performance_20250908.json  performance_20250909.json  performance_20250910.json  performance_20250911.json  performance_20250912.json  performance_20250913.json  performance_20250914.json  performance_20250915.json  performance_20250916.json  performance_20250917.json  performance_20250918.json  performance_20250919.json  performance_20250920.json  performance_20250921.json  performance_20250922.json  performance_20250923.json  performance_20250924.json  performance_20250925.json  time_trend.txt  trend_stats.txt
plans/: broken-files-detection.md  ci-cd-improvements.md  duplicate-issue-prevention-goap-plan.md  fix-github-issues-goap-plan.md  goap-ci-cd-improvements.md  goap-linting-code-quality.md  goap-release-preparation.md  goap-testing-improvements.md  issues-resolution-goap-plan.md  linting-code-quality.md  (+5 more)
src/: cache.rs  (+17 more)
(+1772 files in other folders)
