[package]
name = "do-codeguardian"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Oswald <6849456+d-oit@users.noreply.github.com>"]
description = "CodeGuardian is a cutting-edge, security-first code analysis tool that combines machine learning, advanced static analysis, and seamless GitHub integration to help developers identify vulnerabilities, optimize performance, and maintain high code quality standards. Built with Rust for speed and reliability, it empowers teams to ship secure software faster."
license = "MIT"
repository = "https://github.com/d-oit/do-codeguardian"
homepage = "https://github.com/d-oit/do-codeguardian"
documentation = "https://github.com/d-oit/do-codeguardian/docs"
readme = "README.md"
keywords = ["security", "analysis", "git", "cli", "code-quality", "ai", "validation", "production"]
categories = ["command-line-utilities", "development-tools", "security"]
exclude = ["target/", "benches/", "tests/fixtures/", "examples/ml-training-example.rs"]
build = "build.rs"

[features]
default = ["git", "security", "logging"]
git = ["git2"]
security = ["regex"]
logging = ["tracing", "tracing-subscriber"]
hashing = []
cargo-audit = ["dep:cargo-audit"]
ml = ["fann"]
ast = ["syn", "quote", "proc-macro2"]
ml-enhanced = ["ml", "ast"]

# Fast development build - minimal features
dev = ["git", "security", "logging"]
# Full features for CI/release
full = ["git", "security", "logging", "hashing", "cargo-audit", "ml", "ast"]

[dependencies]
# CLI and async runtime - use minimal features for faster builds
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Git operations
git2 = { version = "0.20", optional = true }

# Logging - minimal features
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

# HTTP client - minimal features for faster builds
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Regular expressions and pattern matching
regex = { version = "1.10", optional = true }

# Directory traversal
walkdir = "2.5"

# File hashing
sha2 = "0.10"
blake3 = "1.5"

# Parallel processing
rayon = "1.10"

# Additional utilities
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"
once_cell = "1.20"
indicatif = "0.18"
num_cpus = "1.16"
serde_yaml = "0.9"
is-terminal = "0.4"

# Machine Learning
fann = { version = "0.1", optional = true }

# AST Analysis - full features for AST parsing and visiting
syn = { version = "2.0", features = ["parsing", "printing", "full", "visit"], optional = true }
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }

# Dependency analysis
cargo_metadata = "0.22"
cargo-audit = { version = "0.21", optional = true }
cargo-deny = "0.16"

[dev-dependencies]
# Testing utilities
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.7"

# Mocking and fixtures
mockito = "1.5"
fake = "4.4"

# Development tools
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"] }

# Property-based testing
proptest = "1.5"

# Benchmarking
divan = "0.1"

# Tokio with test utilities for testing
tokio = { version = "1.40.0", features = ["test-util", "fs"] }

[[bench]]
name = "hashing_benchmark"
harness = false

[[bench]]
name = "optimization_benchmarks"
harness = false

[[bench]]
name = "performance_benchmark"
harness = false

[[bench]]
name = "scanning_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
# Faster incremental builds
incremental = true

[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = false
overflow-checks = false
lto = false
codegen-units = 16
incremental = true

[profile.bench]
opt-level = 3
debug = false
lto = true

[profile.test]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
